新たな関数「scss_move_stock」の追加

--- a/localisation/japanese/generic/geacps_suez_canal_system_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_suez_canal_system_l_japanese.yml
@@ -14,5 +14,6 @@ scss_title_country_name:0 "保有国"
 scss_title_stock_ratio:0 "保有割合"
 
 #エフェクトのツールチップ
-tt_scss_scss_change_stock:0 "[?add_country.GetName]が保有するスエズ運河株式会社の株式を[?temp_add_amount|+]変化させる。"
-tt_scss_scss_set_stock:0 "[?add_country.GetName]をスエズ運河株式会社の株式保有国に加える。購入する株式量は[?temp_add_amount|+]である。"
+tt_scss_scss_change_stock:0 "[?add_country.GetName]が保有するスエズ運河株式会社の株式を[?add_value|+]変化させる。"
+tt_scss_scss_set_stock:0 "[?add_country.GetName]をスエズ運河株式会社の株式保有国に加える。購入する株式量は[?add_value|+]である。"
+tt_scss_scss_move_stock:0 "[?remove_country.GetName]が保有するスエズ運河株式会社の株式を[?add_country.GetName]へ売却する。売却する株式量は[?add_value|+]である。"
