NFアイコン関連

--- a/localisation/japanese/countries_europe/geacps_CZE_l_japanese.yml
+++ b/localisation/japanese/countries_europe/geacps_CZE_l_japanese.yml
@@ -9,12 +9,12 @@
  CZE_establish_constitution_desc:0 "TODO"
  CZE_purge_tisso_faction:0 "ティソ派閥の粛清"
  CZE_purge_tisso_faction_desc:0 "TODO"
- CZE_remember_herba:0 "ハーバの悲劇を思い出せ"
- CZE_remember_herba_desc:0 "TODO"
+ CZE_remember_hacha:0 "ハーハの悲劇を思い出せ"
+ CZE_remember_hacha_desc:0 "TODO"
  CZE_cheer_up_slovak:0 "スロバキア地域の慰問"
  CZE_cheer_up_slovak_desc:0 "TODO"
- CZE_beness_relaxtion:0 "ベネシス布告の緩和"
- CZE_beness_relaxtion_desc:0 "TODO"
+ CZE_benes_relaxtion:0 "ベネシュ布告の緩和"
+ CZE_benes_relaxtion_desc:0 "TODO"
  CZE_republic_procalm:0 "共和国宣言"
  CZE_republic_procalm_desc:0 "TODO"
  CZE_democratic_election:0 "民主的な選挙"
@@ -67,8 +67,10 @@
  CZE_weapon_export_west_desc:0 "TODO"
  CZE_middle_of_europe:0 "東西仲介"
  CZE_middle_of_europe_desc:0 "TODO"
- CZE_to_the_allys:0 "連合国へ"
- CZE_to_the_allys_desc:0 "TODO"
+ CZE_to_the_western_european_union:0 "西ヨーロッパ同盟へ"
+ CZE_to_the_western_european_union_desc:0 "TODO"
+ CZE_to_the_westminster_treaty_organisation:0 "ウェストミンスター条約機構へ"
+ CZE_to_the_westminster_treaty_organisation_desc:0 "TODO"
  CZE_independent_diplo:0 "独自外交"
  CZE_independent_diplo_desc:0 "TODO"
  CZE_befriend_with_friends:0 "周辺国との相互協定"
@@ -77,8 +79,8 @@
  CZE_third_way_desc:0 "TODO"
  CZE_following_comintern:0 "コミンフォルムへの追従"
  CZE_following_comintern_desc:0 "TODO"
- CZE_mutual_id_Economy:0 "相互援助経済"
- CZE_mutual_id_Economy_desc:0 "TODO"
+ CZE_mutual_aid_economy:0 "相互援助経済"
+ CZE_mutual_aid_economy_desc:0 "TODO"
  CZE_joint_tank_research:0 "戦車研究の統合"
  CZE_joint_tank_research_desc:0 "TODO"
  CZE_rostov_agreement:0 "ロストフ協定"
