北方地域の諸変更

--- a/localisation/japanese/map/geacps_state_names_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_l_japanese.yml
@@ -997,7 +997,7 @@
  STATE_996:0 "西ギリシャ"
  STATE_997:0 "テッサリア"
  STATE_998:0 "アッティカ"
- STATE_999:0 "オート＝ノルマンディー"
+ STATE_999:0 "高地ノルマンディー"
  STATE_1000:0 "上部フランケン"
  STATE_1001:0 "下部フランケン"
  STATE_1002:0 "トリエステ"
@@ -1237,7 +1237,7 @@
  STATE_1236:0 "バーレーン"
  STATE_1237:0 "シェパード諸島"
  STATE_1238:0 "ジュビー岬"
- STATE_1239:0 "尼港"
+ STATE_1239:0 "ボゴロツコエ"
  STATE_1240:0 "アリューシャン列島"
  STATE_1241:0 "ウラル"
  STATE_1242:0 "チカロフスク"
@@ -1467,11 +1467,11 @@
  STATE_1466:0 "レンスク"
  STATE_1467:0 "アンゴラ中部"
  STATE_1468:0 "アンゴラ北部"
- STATE_1469:0 "ジャライド"	#扎賚特
- STATE_1470:0 "ヒンガン"	#興安
- STATE_1471:0 "トンリャオ"	#通遼
- STATE_1472:0 "ホーリンゴル"	#霍林郭勒
- STATE_1473:0 "ウランハダ"	#赤峰
+ STATE_1469:0 "ジャライド"
+ STATE_1470:0 "ヒンガン"
+ STATE_1471:0 "トンリャオ"
+ STATE_1472:0 "ホーリンゴル"
+ STATE_1473:0 "ウランハダ"
  STATE_1474:0 "カザフ・アルタイ"
  STATE_1475:0 "フローニンゲン"
  STATE_1476:0 "ドレンテ"
@@ -1482,3 +1482,4 @@
  STATE_1481:0 "ケリゴ島"
  STATE_1482:0 "南ブコヴィナ"
  STATE_1483:0 "アディゲ"
+ STATE_1484:0 "ニコラエフスク・ナ・アムーレ"
