--- a/localisation/japanese/map/geacps_state_names_native_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_native_l_japanese.yml
@@ -402,6 +402,8 @@
  STATE_971_ch:0 "迪慶"
  STATE_989_ja:0 "華府"
  STATE_990_de:0 "モスカウ市"
+ STATE_999_en:0 "アッパー＝ノルマンディー"
+ STATE_999_fr:0 "オート＝ノルマンディー"
  STATE_1000_de:0 "オーバーフランケン"
  STATE_1000_en:0 "アッパーフランコニア"
  STATE_1000_fr:0 "オートフランコニー"
@@ -439,8 +441,8 @@
  STATE_1185_ch:0 "南坎"
  STATE_1222_en:0 "スネーク"
  STATE_1233_en:0 "セント・バーツ島"
- STATE_1239_ch:0 "廟街"
- STATE_1239_ru:0 "ニコラエフスク・ナ・アムーレ"
+ STATE_1239_ch:0 "前坎"
+ STATE_1239_ja:0 "間宮"
  STATE_1257_fr:0 "デルタ・デュ・メコン"
  STATE_1318_ch:0"達子泉一村"
  STATE_1319_ch:0 "西ハンギ"
@@ -461,3 +463,11 @@
  STATE_1431_en:0 "シンガポール島"
  STATE_1431_ja:0 "新嘉波島"
  STATE_1431_ja_empire:0 "昭南島"
+ STATE_1469_ch:0 "扎賚特"
+ STATE_1470_ch:0 "興安"
+ STATE_1471_ch:0 "通遼"
+ STATE_1472_ch:0 "霍林郭勒"
+ STATE_1473_ch:0 "赤峰"
+ STATE_1484_ch:0 "廟街"
+ STATE_1484_ja:0 "尼港"
+ STATE_1484_ru_monarchy:0 "ニコラエフスク"
