--- a/localisation/japanese/map/geacps_victory_points_l_japanese.yml
+++ b/localisation/japanese/map/geacps_victory_points_l_japanese.yml
@@ -73,6 +73,7 @@
  VICTORY_POINTS_732:0 "リンツ"
  VICTORY_POINTS_740:0 "ビルバオ"
  VICTORY_POINTS_758:1 "ラ・コルーニャ"
+ VICTORY_POINTS_773:0 "ブレシア"
  VICTORY_POINTS_775:0 "サリスク"
  VICTORY_POINTS_778:0 "アヌシー"
  VICTORY_POINTS_788:0 "ノーフォーク"
@@ -80,6 +81,7 @@
  VICTORY_POINTS_814:0 "承徳"
  VICTORY_POINTS_819:0 "ナポリ"
  VICTORY_POINTS_853:0 "フェニックス"
+ VICTORY_POINTS_855:0 "奥端"
  VICTORY_POINTS_858:0 "トレド"
  VICTORY_POINTS_863:0 "カルディツァ"
  VICTORY_POINTS_875:1 "コルドバ"
@@ -278,6 +280,7 @@
  VICTORY_POINTS_3583:0 "オストラヴァ"
  VICTORY_POINTS_3585:0 "カールスバート"
  VICTORY_POINTS_3594:0 "ヴィシー"
+ VICTORY_POINTS_3604:0 "パドヴァ"
  VICTORY_POINTS_3618:0 "グリエフ"
  VICTORY_POINTS_3652:0 "ディジョン"
  VICTORY_POINTS_3653:0 "バトゥミ"
@@ -310,6 +313,7 @@
  VICTORY_POINTS_3933:0 "パンプローナ"
  VICTORY_POINTS_3938:0 "マドリード"
  VICTORY_POINTS_3942:0 "デリゾール"
+ VICTORY_POINTS_3943:0 "ザダル"
  VICTORY_POINTS_3945:0 "クエンカ"
  VICTORY_POINTS_3951:0 "エスキシェヒル"
  VICTORY_POINTS_3954:0 "カスペ"
@@ -430,6 +434,7 @@
  VICTORY_POINTS_5068:0 "ハルゲイサ"
  VICTORY_POINTS_5071:0 "アグア・プリエタ"
  VICTORY_POINTS_5074:0 "アデン"
+ VICTORY_POINTS_5097:0 "デセ"
  VICTORY_POINTS_5105:0 "クエッタ"
  VICTORY_POINTS_5107:0 "フォルタレザ"
  VICTORY_POINTS_5112:0 "サントス"
@@ -510,6 +515,7 @@
  VICTORY_POINTS_6766:0 "トゥールーズ"
  VICTORY_POINTS_6780:0 "トリノ"
  VICTORY_POINTS_6788:0 "ジェノヴァ"
+ VICTORY_POINTS_6793:0 "フェラーラ"
  VICTORY_POINTS_6822:0 "清津"
  VICTORY_POINTS_6832:0 "シウダー・レアル"
  VICTORY_POINTS_6845:0 "フィラデルフィア"
@@ -519,6 +525,7 @@
  VICTORY_POINTS_6880:0 "ファロ"
  VICTORY_POINTS_6882:0 "ニューアーク"
  VICTORY_POINTS_6890:0 "クリーブランド"
+ VICTORY_POINTS_6900:0 "コルチェ"
  VICTORY_POINTS_6902:0 "バダホス"
  VICTORY_POINTS_6906:0 "バレンシア"
  VICTORY_POINTS_6923:0 "プロヴディフ"
@@ -527,6 +534,7 @@
  VICTORY_POINTS_6935:0 "ヴァン"
  VICTORY_POINTS_6936:0 "パレンシア"
  VICTORY_POINTS_6938:0 "カスタモヌ"
+ VICTORY_POINTS_6946:0 "ルッカ"
  VICTORY_POINTS_6966:0 "トゥルトーザ"
  VICTORY_POINTS_6973:0 "ラ・スペツィア"
  VICTORY_POINTS_6983:0 "バニャ・ルカ"
@@ -616,16 +624,19 @@
  VICTORY_POINTS_7661:0 "バクー"
  VICTORY_POINTS_7663:0 "吉林"
  VICTORY_POINTS_7669:0 "ダーウィン"
+ VICTORY_POINTS_7708:0 "パブロダル"
  VICTORY_POINTS_7757:0 "ケメロヴォ"
  VICTORY_POINTS_7789:0 "トムスク"
  VICTORY_POINTS_7798:0 "メルボルン"
  VICTORY_POINTS_7799:0 "ウリヤスタイ"
+ VICTORY_POINTS_7822:0 "ノヴォクズネツク"
  VICTORY_POINTS_7834:0 "トピカ"
  VICTORY_POINTS_7859:0 "キャンベラ"
- VICTORY_POINTS_7868:0 "尼港"
+ VICTORY_POINTS_7868:0 "間宮"
  VICTORY_POINTS_7897:0 "北安"
  VICTORY_POINTS_7900:0 "ムババネ"
  VICTORY_POINTS_7903:0 "ラヒームヤール・ハーン"
+ VICTORY_POINTS_7912:0 "ジレン"
  VICTORY_POINTS_7921:0 "ドゥランゴ"
  VICTORY_POINTS_7940:0 "ゴルムド"
  VICTORY_POINTS_7953:0 "アフヴァーズ"
@@ -638,6 +649,7 @@
  VICTORY_POINTS_8010:0 "プナカ"
  VICTORY_POINTS_8011:0 "バンガロール"
  VICTORY_POINTS_8032:0 "マンサニヨ"
+ VICTORY_POINTS_8036:0 "アセラ"
  VICTORY_POINTS_8038:0 "ラユーン"
  VICTORY_POINTS_8049:0 "延安"
  VICTORY_POINTS_8051:0 "ドーハ"
@@ -733,11 +745,13 @@
  VICTORY_POINTS_9713:0 "サクラメント"
  VICTORY_POINTS_9716:0 "ヤシ"
  VICTORY_POINTS_9737:0 "ボルドー"
+ VICTORY_POINTS_9752:0 "パルマ"
  VICTORY_POINTS_9753:0 "アストラハン"
  VICTORY_POINTS_9759:0 "通化"
  VICTORY_POINTS_9764:0 "バルセロナ"
  VICTORY_POINTS_9772:0 "サッサリ"
  VICTORY_POINTS_9777:0 "スィヴァス"
+ VICTORY_POINTS_9780:0 "シュコーデル"
  VICTORY_POINTS_9783:0 "ヴァルナ"
  VICTORY_POINTS_9784:0 "バーリ"
  VICTORY_POINTS_9787:0 "ヴィゼウ"
@@ -778,6 +792,7 @@
  VICTORY_POINTS_9974:0 "寧波"
  VICTORY_POINTS_9975:0 "アフマダーバード"
  VICTORY_POINTS_9979:1 "マラガ"
+ VICTORY_POINTS_9989:1 "シディ・バッラニ"
  VICTORY_POINTS_9990:0 "レッジョ・カラブリア"
  VICTORY_POINTS_9994:0 "ビゼルト"
  VICTORY_POINTS_9998:0 "横浜"
@@ -790,6 +805,7 @@
  VICTORY_POINTS_10041:0 "デニズリ"
  VICTORY_POINTS_10055:0 "鳥取"
  VICTORY_POINTS_10056:0 "メルスィン"
+ VICTORY_POINTS_10061:0 "マルサ・マトルーフ"
  VICTORY_POINTS_10062:0 "香港"
  VICTORY_POINTS_10066:0 "サヒワル"
  VICTORY_POINTS_10068:0 "天津"
@@ -844,6 +860,7 @@
  VICTORY_POINTS_10447:0 "ポルト・アレグレ"
  VICTORY_POINTS_10496:0 "ルアンパバーン"
  VICTORY_POINTS_10513:0 "サンパウロ"
+ VICTORY_POINTS_10580:0 "アバカン"
  VICTORY_POINTS_10612:0 "満洲里"
  VICTORY_POINTS_10627:0 "クィズィル"
  VICTORY_POINTS_10641:0 "ヤクーツク"
@@ -1018,6 +1035,7 @@
  VICTORY_POINTS_12060:0 "釜山"
  VICTORY_POINTS_12072:0 "浜松"
  VICTORY_POINTS_12080:0 "インドール"
+ VICTORY_POINTS_12087:0 "テトゥアン"
  VICTORY_POINTS_12090:0 "アキャブ"
  VICTORY_POINTS_12097:0 "鈴鹿"
  VICTORY_POINTS_12100:0 "メリリャ"
@@ -1062,14 +1080,17 @@
  VICTORY_POINTS_12489:0 "リトルロック"
  VICTORY_POINTS_12501:0 "ナッシュビル"
  VICTORY_POINTS_12505:0 "セント・ジョンズ"
+ VICTORY_POINTS_12559:0 "尼港"
  VICTORY_POINTS_12583:0 "ビシュケク"
  VICTORY_POINTS_12586:0 "オマハ"
  VICTORY_POINTS_12589:0 "ケープタウン"
  VICTORY_POINTS_12594:0 "セミパラチンスク"
  VICTORY_POINTS_12641:0 "チタ"
  VICTORY_POINTS_12674:0 "レイキャビク"
+ VICTORY_POINTS_12683:0 "マガダン"
  VICTORY_POINTS_12708:0 "シムラー"
  VICTORY_POINTS_12715:0 "メリダ"
+ VICTORY_POINTS_12723:0 "ビシア"
  VICTORY_POINTS_12725:0 "ポートスーダン"
  VICTORY_POINTS_12727:0 "リヤド"
  VICTORY_POINTS_12732:0 "蘭州"
@@ -1125,7 +1146,10 @@
  VICTORY_POINTS_13091:0 "アンカレッジ"
  VICTORY_POINTS_13215:0 "メヒカリ"
  VICTORY_POINTS_13232:0 "サモラ"
+ VICTORY_POINTS_13244:0 "ガンベラ"
  VICTORY_POINTS_13249:0 "ハラール"
+ VICTORY_POINTS_13250:0 "アスマラ"
+ VICTORY_POINTS_13255:0 "ドゥラス"
  VICTORY_POINTS_13256:0 "シラクサ"
  VICTORY_POINTS_13273:0 "ダマン"
  VICTORY_POINTS_13274:0 "ディウ"
@@ -1138,26 +1162,3 @@
  VICTORY_POINTS_13443:0 "ベルリン"
  VICTORY_POINTS_13443:0 "東ベルリン"
  VICTORY_POINTS_13444:0 "ヘルシンキ"
- 
- VICTORY_POINTS_773:0 "ブレシア"
- VICTORY_POINTS_3604:0 "パドヴァ"
- VICTORY_POINTS_6793:0 "フェラーラ"
- VICTORY_POINTS_9752:0 "パルマ"
- VICTORY_POINTS_6946:0 "ルッカ"
- VICTORY_POINTS_3943:0 "ザダル"
- VICTORY_POINTS_8036:0 "アセラ"
- VICTORY_POINTS_12087:0 "テトゥアン"
- VICTORY_POINTS_9780:0 "シュコーデル"
- VICTORY_POINTS_6900:0 "コルチェ"
- VICTORY_POINTS_13255:0 "ドゥラス"
- VICTORY_POINTS_10061:0 "マルサ・マトルーフ"
- VICTORY_POINTS_9989:1 "シディ・バッラニ"
- VICTORY_POINTS_7822:0 "ノヴォクズネツク"
- VICTORY_POINTS_10580:0 "アバカン"
- VICTORY_POINTS_12683:0 "マガダン"
- VICTORY_POINTS_7708:0 "パブロダル"
- VICTORY_POINTS_7912:0 "ジレン"
- VICTORY_POINTS_13244:0 "ガンベラ"
- VICTORY_POINTS_12723:0 "ビシア"
- VICTORY_POINTS_13250:0 "アスマラ"
- VICTORY_POINTS_5097:0 "デセ"
