日本NF(日華戦争ツリー)リワーク

--- a/localisation/japanese/countries_asia/geacps_JAP_l_japanese.yml
+++ b/localisation/japanese/countries_asia/geacps_JAP_l_japanese.yml
@@ -1,10 +1,10 @@
 ﻿l_japanese:
 #国家方針
  JAP_focus_tree:0 "[ROOT.GetName]の国家方針"
- JAP_1-22_Incident:0 "一・二二事件"
- JAP_1-22_Incident_desc:0 "憲兵の情報によると、帝國における反政府運動が激化しようとしているらしい。\n具体的にどの様な人物、もしくは組織が裏に潜んでいるかの情報は掴めてはいないものの、帝都の占拠の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
- JAP_senior_statesmen's_conference:0 "重臣会議を開催する"
- JAP_senior_statesmen's_conference_desc:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一\n大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎\n海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
+ JAP_january_22_incident:0 "一・二二事件"
+ JAP_january_22_incident_desc:0 "憲兵の情報によると、帝國における反政府運動が激化しようとしているらしい。\n具体的にどの様な人物、もしくは組織が裏に潜んでいるかの情報は掴めてはいないものの、帝都の占拠の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
+ JAP_senior_statesmens_conference:0 "重臣会議を開催する"
+ JAP_senior_statesmens_conference_desc:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一\n大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎\n海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
  JAP_cabinet_meeting:0 "閣議を開く"
  JAP_cabinet_meeting_desc:0 "一・二二事件を受けて各国務大臣を招集して閣議を開き、当案件に対し早急に対応しなければならない。"
  JAP_declaration_of_martial_law:0 "戒嚴の宣告"
@@ -91,11 +91,23 @@
  
  JAP_Japanese_Revolution:0 "日本革命"
  
- JAP_Marco_Polo_Bridge_Incident:0 "盧溝橋事件"
- JAP_Battle_of_Nanking:0 "南京攻略戦"
- JAP_Capture_of_Wuhan:0 "武漢作戦"
- JAP_Capture_of_Chongqing:0 "重慶作戦"
+ JAP_marco_polo_bridge_incident:0 "盧溝橋事件"
+ JAP_north_china_incident:0 "北支事変"
+ JAP_peiking_tientsin_operation:0 "平津作戦"
+ JAP_operation_chahar:0 "チャハル作戦"
+ JAP_establishment_of_MEN_autonomous_federation:0 "蒙古自治邦の樹立"
+ JAP_establishment_of_CHI_minguo_provisional_government:0 "中華民国臨時政府の樹立"
+ JAP_2nd_shanghai_incident:0 "第二次上海事変"
+ JAP_establishment_of_SGH_great_way_municipal_government:0 "上海大同政府の樹立"
+ JAP_battle_of_nanking:0 "南京攻略戦"
+ JAP_establishment_of_CHI_minguo_reformed_government:0 "中華民国維新政府の樹立"
+ JAP_approval_of_the_southern_china_governments:0 "南支諸政府の承認"
+ JAP_formation_of_the_wang_jingwei_ming_unity_government:0 "汪兆銘統一政府の形成"
+ JAP_anti_chiang_united_front:0 "反蒋合作"
+ JAP_capture_of_wuhan:0 "武漢作戦"
+ JAP_capture_of_chongqing:0 "重慶作戦"
  JAP_triumphant:0 "凱旋だ！"
+ JAP_negotiations_between_JAP_and_CHI:0 "日華交渉"
 
 #国家方針
  GEACPS_NF_JAP_army_00:0 "軍部の統一"
@@ -169,7 +181,7 @@
  JAP_victory_in_the_greater_east_asia_war_desc:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。\n戦前、日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し、南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。\n我々はこの太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
  JAP_the_greater_east_asia_conference_and_the_greater_east_asia_joint_declaration:0 "大東亞會議と大東亞共同宣言"
  JAP_the_greater_east_asia_conference_and_the_greater_east_asia_joint_declaration_desc:0 "大東亞會議は、1943年11月5日-11月6日に東京で開催されたアジア地域の首脳会議。同年5月31日に御前会議で決定された大東亜政略指導大綱に基づき開催された。\n当時の日本の同盟国や、日本が大東亜戦争で旧宗主国を放逐したことにより独立されたアジア諸国の国政最高責任者を招請して行われた。そこでは、大東亜共栄圏の綱領ともいうべき大東亞共同宣言が採択された。日本は第2回目の大東亜会議を開催する計画を持っていたが、戦局の泥沼化に伴って開催困難となり、昭和20年5月には代替として駐日特命全権大使や駐日代表による「大使会議」が開催された。"#こちらの文章は、当MODの通史との整合性が取れなくなる可能性が存在している為、今後修正される可能性が高いです。
- JAP_Martial_law:0 "戒嚴令"
+ JAP_martial_law:0 "戒嚴令"
  JAP_A_great_raccoon_who_cares_for_his_country:0 "国を想う大狸"
  JAP_Sake_is_Yonai_or_Yonai_is_sake:0 "酒が米内か、米内が酒か"
  JAP_Oni_no_Kantaro:0 "鬼の貫太郎"
@@ -441,7 +453,7 @@
  JAP_impending_zveno_coup_size_tt:0 "[GetZvenoName]支持者が内戦を開始する。\nズヴェノの軍の規模はズヴェノの支持率に比例する。"
  
 #フラグ
- JAP_1-22_Incident_occurred:0 "一・二二事件が発生した"
+ JAP_january_22_incident_occurred:0 "一・二二事件が発生した"
  JAP_senior_statesmens_conference_held:0 "重臣会議が開催された"
  JAP_army_candidates_selected:0 "陸軍の出した候補が奏薦された"
  JAP_navy_candidates_selected:0 "海軍の出した候補が奏薦された"
@@ -453,5 +465,6 @@
  JAP_light_judgment_against_kodoha:0 "皇道派将校は軽い判決を下された"
  
 #ツールチップ
- JAP_omen_of_1-22_Incident:0 "§R国内に混乱が起きようとしている...§!"
+ JAP_marco_polo_bridge_incident_tt:0 ""
+ JAP_january_22_incident_tt:0 "§R国内に混乱が起きようとしている...§!"
  JAP_menokataki_against_navy:0 "§R海軍を目の敵に...おっと§!"
