--- a/localisation/japanese/generic/geacps_suez_canal_system_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_suez_canal_system_l_japanese.yml
@@ -17,3 +17,4 @@ scss_title_stock_ratio:0 "保有割合"
 tt_scss_scss_change_stock:0 "[?add_country.GetName]が保有するスエズ運河株式会社の株式を[?add_value|+]変化させる。"
 tt_scss_scss_set_stock:0 "[?add_country.GetName]をスエズ運河株式会社の株式保有国に加える。購入する株式量は[?add_value|+]である。"
 tt_scss_scss_move_stock:0 "[?remove_country.GetName]が保有するスエズ運河株式会社の株式を[?add_country.GetName]へ売却する。売却する株式量は[?add_value|+]である。"
+tt_scss_sell_all_stock:0 "[?remove_country.GetName]が保有するスエズ運河株式会社の株式を全て売却する"
