--- a/localisation/japanese/generic/geacps_suez_canal_system_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_suez_canal_system_l_japanese.yml
@@ -12,7 +12,7 @@ scss_stock_amount:0 "流通総株量/株発行上限額:[?global.scss_total_stoc
 scss_country_amount:0 "保有国:[?global.scss_stock_holders]ヶ国"
 scss_title_country_name:0 "保有国"
 scss_title_stock_ratio:0 "保有割合"
-
+ISS_PIECHART_TT:0 "[?global.scss_country_list^v.GetName]:[?global.scss_ratio_list^v|1]%"
 #エフェクトのツールチップ
 tt_scss_scss_change_stock:0 "[?add_country.GetName]が保有するスエズ運河株式会社の株式を[?add_value|+]変化させる。"
 tt_scss_scss_set_stock:0 "[?add_country.GetName]をスエズ運河株式会社の株式保有国に加える。購入する株式量は[?add_value|+]である。"
