--- a/localisation/japanese/generic/geacps_parties_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_parties_l_japanese.yml
@@ -78,8 +78,8 @@
  PARTY_southern_army_military_government_long:0 "南方軍軍政監部"
  
 #JAP-日本
- PARTY_imperial_rule_assistance_association:0 "大政翼賛会"
- PARTY_imperial_rule_assistance_association_long:0 "大政翼賛会"
+ PARTY_imperial_rule_assistance_political_society:0 "翼政会"
+ PARTY_imperial_rule_assistance_political_society_long:0 "翼賛政治会"
  PARTY_greater_japan_party:0 "大日本党"
  PARTY_greater_japan_party_long:0 "大日本党"
  
