--- a/localisation/japanese/map/geacps_state_names_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_l_japanese.yml
@@ -298,7 +298,7 @@
  STATE_297:0 "赤道ギニア"
  STATE_298:0 "リベリア"
  STATE_299:0 "フォークランド諸島"
- STATE_300:0 "ウルグアイ"
+ STATE_300:0 "ウルグアイ南部"
  STATE_301:0 "東部地方"
  STATE_302:0 "アンデス高地"
  STATE_303:0 "北部"
@@ -1483,3 +1483,5 @@
  STATE_1482:0 "南ブコヴィナ"
  STATE_1483:0 "アディゲ"
  STATE_1484:0 "ニコラエフスク・ナ・アムーレ"
+ STATE_1485:0 "ウルグアイ東部"
+ STATE_1486:0 "ウルグアイ西部"
