パラグアイ

--- a/localisation/japanese/map/geacps_state_names_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_l_japanese.yml
@@ -686,7 +686,7 @@
  STATE_685:0 "パナマ運河地帯"
  STATE_686:0 "プエルトリコ"
  STATE_687:0 "ガイアナ"
- STATE_688:0 "チャコ中部"
+ STATE_688:0 "オリンポ"
  STATE_689:0 "ジャマイカ"
  STATE_690:0 "バハマ北部"
  STATE_691:0 "トリニダード"
@@ -1485,3 +1485,6 @@
  STATE_1484:0 "ニコラエフスク・ナ・アムーレ"
  STATE_1485:0 "ウルグアイ東部"
  STATE_1486:0 "ウルグアイ西部"
+ STATE_1487:0 "ウルグアイ北部"
+ STATE_1488:0 "ボケローン"
+ STATE_1489:0 "プレシデンテ・アイェス"
