チリとコロンビア

--- a/localisation/japanese/map/geacps_state_names_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_l_japanese.yml
@@ -505,7 +505,7 @@
  STATE_504:0 "イグアス"
  STATE_505:0 "ゴイアス"
  STATE_506:0 "ノルテ・グランデ"
- STATE_507:0 "ゾナ・アウストラル"
+ STATE_507:0 "マガジャーネス"
  STATE_508:0 "トゥクマン"
  STATE_509:0 "チャコ南部"
  STATE_510:0 "中央地域"
@@ -1488,3 +1488,6 @@
  STATE_1487:0 "ウルグアイ北部"
  STATE_1488:0 "ボケローン"
  STATE_1489:0 "プレシデンテ・アイェス"
+ STATE_1490:0 "アリカ・イ・パリナコータ"
+ STATE_1491:0 "アイセン"
+ STATE_1492:0 "チロエ諸島"
