プッシュし忘れ

--- a/localisation/japanese/map/geacps_state_names_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_l_japanese.yml
@@ -303,9 +303,9 @@
  STATE_302:0 "アンデス高地"
  STATE_303:0 "北部"
  STATE_304:0 "東部"
- STATE_305:0 "エクアドル"
+ STATE_305:0 "コスタ"
  STATE_306:0 "太平洋低地"
- STATE_307:0 "ミランダ"
+ STATE_307:0 "カラカス"
  STATE_308:0 "リーワード諸島"
  STATE_309:0 "スリナム"
  STATE_310:0 "カイエンヌ"
@@ -685,7 +685,7 @@
  STATE_684:0 "カロリン諸島"
  STATE_685:0 "パナマ運河地帯"
  STATE_686:0 "プエルトリコ"
- STATE_687:0 "ガイアナ"
+ STATE_687:0 "ガイアナ沿岸"
  STATE_688:0 "オリンポ"
  STATE_689:0 "ジャマイカ"
  STATE_690:0 "バハマ北部"
@@ -1491,3 +1491,17 @@
  STATE_1490:0 "アリカ・イ・パリナコータ"
  STATE_1491:0 "アイセン"
  STATE_1492:0 "チロエ諸島"
+ STATE_1493:0 "トゥンベス"
+ STATE_1494:0 "オリエンテ"
+ STATE_1495:0 "シエラ北部"
+ STATE_1496:0 "シエラ南部"
+ STATE_1497:0 "エセキバ沿岸"
+ STATE_1498:0 "ガイアナ高地"
+ STATE_1499:0 "ベルビセ＝コレンティネ"
+ STATE_1500:0 "デルタ・アマクーロ"
+ STATE_1501:0 "アマソナス"
+ STATE_1502:0 "ベネズエラ東部"
+ STATE_1503:0 "グアリコ"
+ STATE_1504:0 "アプレ"
+ STATE_1505:0 "ベネズエラ中部"
+ STATE_1506:0 "ベネズエラ・アンデス"
