イデオロギーの諸修正

--- a/localisation/japanese/generic/geacps_bookmarks_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_bookmarks_l_japanese.yml
@@ -7,21 +7,20 @@
  THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...\n先の大戦で肥大化したドイツとイタリア、及びそれらの同盟国の撃破に成功した。しかし、各戦勝国の独自路線が仇となり、戦後の新秩序の建設には失敗してしまった。後に「冷戦」と呼ばれることとなるこの構造は、イギリスとフランス、そして赤き帝国との間に暗い影を落とし続けている。以前の支配者は大きく三つに分断され、その最大の同盟国は南部が支配から脱した。\n今やバルト海のシュチェチンからアドリア海のトリエステの間で欧州は二分され、さらに一方では海峡を超えた対立が激化しようとしているのであった..."
  
 #各国の説明
- GBR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "イギリスは辛うじて勝利を収めたものの、問題が山積しているのも事実である。隣国との関係悪化や鉄のカーテンを隔てた向こう側との関係、脱植民地化の加速等の問題に対して、クレメント・アトリー率いる労働党はどう対処するのだろうか...？"
- SPR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- FRA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- SWE_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- POL_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- SER_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- RUS_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
-
- CHI_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "1937年の夏より勃発した日中戦争は、十年近くの歳月を経た現在においても継続している。\n\nしかし、大日本帝国率いる大東亜共栄圏との長きにわたる戦争について、国民党率いる中央政府は未だ勝利への道をあきらめていない一方で、中華民国の国力は疲弊し、もはや国内の軍閥は中央政府の指示に従おうとはしていない。\n\nその上中華統一戦線の加盟国も、戦線離脱を望んでおり、各国は自国の戦力をいかに温存すべきかについて注力している。\n\n残念なことに中華民国の影響力が低下しつつある現状では、大東亜共栄圏に打ち勝つという当初の目標はもはや不可能であるというのが国際世論の見解である。"
- TIB_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- MON_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- MEN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- MAN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- JAP_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
- AST_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ POL_start_desc:0 ""
+ ITA_start_desc:0 ""
+ RUS_start_desc:0 ""
+ FRA_start_desc:0 ""
+ JAP_start_desc:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。\n\n天皇陛下万歳！大日本帝国万歳！"
+ GBR_start_desc:0 "グレートブリテン連合王国は辛うじて勝利を収めたものの、問題が山積しているのも事実である。隣国との関係悪化や鉄のカーテンを隔てた向こう側との関係、脱植民地化の加速等の問題に対して、クレメント・アトリー率いる労働党はどう対処するのだろうか……？"
+ USA_start_desc:0 ""
+ WGR_start_desc:0 ""
  
- TUR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
- SIA_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
+ CZE_start_desc:0 "今のところ英仏からは亡命政府主体の政府が認識されているが、議会では共産党と社会民主党を中核とした国民戦線が議席のおよそ3分の1を占め、元パルチザンを主力とした武装部隊をもって国内の「秩序維持」を行っている。\n適切な対処を行わなければ、共和国に戻りつつある民主主義の炎は消え、そこには冷ややかな風だけが吹き荒れる……"
+ GRE_start_desc:0 ""
+ SIC_start_desc:0 ""
+ 
+ CHI_start_desc:0 "1937年の夏より勃発した日中戦争は、十年近くの歳月を経た現在においても継続している。\n\nしかし、大日本帝国率いる大東亜共栄圏との長きにわたる戦争について、国民党率いる中央政府は未だ勝利への道をあきらめていない一方で、中華民国の国力は疲弊し、もはや国内の軍閥は中央政府の指示に従おうとはしていない。\n\nその上中華統一戦線の加盟国も、戦線離脱を望んでおり、各国は自国の戦力をいかに温存すべきかについて注力している。\n\n残念なことに中華民国の影響力が低下しつつある現状では、大東亜共栄圏に打ち勝つという当初の目標はもはや不可能であるというのが国際世論の見解である。"
+ FEA_start_desc:0 ""
+ 
+ COUNTRY_start_desc:0 ""
