--- a/localisation/japanese/generic/geacps_parties_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_parties_l_japanese.yml
@@ -124,6 +124,20 @@
  PARTY_taiwan_government-general_long:0 "台湾総督府"
  
 ##ヨーロッパ
+#CZE-チェコ
+ PARTY_communist_party_of_czechoslovakia:0 "KSČ"
+ PARTY_communist_party_of_czechoslovakia_long:0 "チェコスロバキア共産党"
+ PARTY_communist_party_of_czechoslovakia_independence_faction:0 "KSČ（独立派）"
+ PARTY_communist_party_of_czechoslovakia_independence_faction_long:0 "チェコスロバキア共産党（独立派）"
+ PARTY_communist_party_of_czechoslovakia_main_faction:0 "KSČ（主流派）"
+ PARTY_communist_party_of_czechoslovakia_main_faction_long:0 "チェコスロバキア共産党（主流派）"
+ PARTY_communist_party_of_czechoslovakia_social_faction:0 "KSČ（社会派）"
+ PARTY_communist_party_of_czechoslovakia_social_faction_long:0 "チェコスロバキア共産党（社会派）"
+ PARTY_czechoslovak_peoples_party:0 "ČSL"
+ PARTY_czechoslovak_peoples_party_long:0 "チェコスロバキア人民党"
+ PARTY_republican_party_of_farmers_and_peasants:0 "RSZML"
+ PARTY_republican_party_of_farmers_and_peasants_long:0 "農業者及び小農民共和党"
+ 
 #FRA-フランス
  PARTY_french_communist_party:0 "共産党"
  PARTY_french_communist_party_long:0 "フランス共産党"
