オーストリア

--- a/localisation/japanese/map/geacps_countries_long_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_long_l_japanese.yml
@@ -564,6 +564,8 @@
  GER_confederation_DEF:0 "ドイツ連邦"
  GER_democratic_republic:0 "ドイツ民主共和国"
  GER_democratic_republic_DEF:0 "ドイツ民主共和国"
+ GER_empire:0 "ドイツ帝国"
+ GER_empire_DEF:0 "ドイツ帝国"
  GER_federal_republic:0 "ドイツ連邦共和国"
  GER_federal_republic_DEF:0 "ドイツ連邦共和国"
  GER_reich:0 "ドイツ国"
@@ -1954,6 +1956,9 @@
  ATS_monastic_republic:0 "アトス修道士共和国"
  ATS_monastic_republic_DEF:0 "アトス修道士共和国"
  
+ BGL_republic:0 "ブルゲンラント共和国"
+ BGL_republic_DEF:0 "ブルゲンラント共和国"
+ 
  BLE_republic:0 "バレアレス共和国"
  BLE_republic_DEF:0 "バレアレス共和国"
  
@@ -1998,6 +2003,11 @@
  CRL_duchy_DEF:0 "クールラント公国"
  CRL_republic:0 "クールラント共和国"
  CRL_republic_DEF:0 "クールラント共和国"
+ 
+ CRT_duchy:0 "ケルンテン大公国"
+ CRT_duchy_DEF:0 "ケルンテン大公国"
+ CRT_republic:0 "ケルンテン共和国"
+ CRT_republic_DEF:0 "ケルンテン共和国"
  
  CST_kingdom:0 "カスティーリャ王国"
  CST_kingdom_DEF:0 "カスティーリャ王国"
@@ -2072,6 +2082,11 @@
  
  KRC_republic:0 "カラチャイ共和国"
  KRC_republic_DEF:0 "カラチャイ共和国"
+ 
+ LAS_archduchy:0 "ニーダーエスターライヒ公国"
+ LAS_archduchy_DEF:0 "ニーダーエスターライヒ公国"
+ LAS_repbulic:0 "ニーダーエスターライヒ共和国"
+ LAS_repbulic_DEF:0 "ニーダーエスターライヒ共和国"
  
  LIE_principality:0 "リヒテンシュタイン侯国"
  LIE_principality_DEF:0 "リヒテンシュタイン侯国"
@@ -2207,12 +2222,32 @@
  SLA_kingdom_DEF:0 "スラブ王国"
  
  
+ SLZ_duchy:0 "ザルツブルク公国"
+ SLZ_duchy_DEF:0 "ザルツブルク公国"
+ SLZ_republic:0 "ザルツブルク共和国"
+ SLZ_republic_DEF:0 "ザルツブルク共和国"
+ 
  
  SMR_most_serene_republic:0 "晴朗極まる共和国サンマリノ"
  SMR_most_serene_republic_DEF:0 "晴朗極まる共和国サンマリノ"
  
+ STY_duchy:0 "シュタイアーマルク公国"
+ STY_duchy_DEF:0 "シュタイアーマルク公国"
+ STY_republic:0 "シュタイアーマルク共和国"
+ STY_republic_DEF:0 "シュタイアーマルク共和国"
+ 
+ TRL_princely_county:0 "チロル諸侯伯国"
+ TRL_princely_county_DEF:0 "チロル諸侯伯国"
+ TRL_republic:0 "チロル共和国"
+ TRL_republic_DEF:0 "チロル共和国"
+ 
  TRN_republic:0 "トランスニストリア共和国"
  TRN_republic_DEF:0 "トランスニストリア共和国"
+ 
+ UAS_archduchy:0 "オーバーエスターライヒ公国"
+ UAS_archduchy_DEF:0 "オーバーエスターライヒ公国"
+ UAS_repbulic:0 "オーバーエスターライヒ共和国"
+ UAS_repbulic_DEF:0 "オーバーエスターライヒ共和国"
  
  URA_republic:0 "ウラル共和国"
  URA_republic_DEF:0 "ウラル共和国"
@@ -2225,6 +2260,11 @@
  
  VOJ_republic:0 "ヴォイヴォディナ共和国"
  VOJ_republic_DEF:0 "ヴォイヴォディナ共和国"
+ 
+ VOR_princely_county:0 "フォアアールベルク諸侯伯国"
+ VOR_princely_county_DEF:0 "フォアアールベルク諸侯伯国"
+ VOR_republic:0 "フォアアールベルク共和国"
+ VOR_republic_DEF:0 "フォアアールベルク共和国"
  
  VOS_federation:0 "ヴォストスラビア連邦"
  VOS_federation_DEF:0 "ヴォストスラビア連邦"
