追加国家タグ

--- a/localisation/japanese/map/geacps_countries_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_l_japanese.yml
@@ -1124,6 +1124,10 @@
  ETR_DEF:0 "東トルキスタン"
  ETR_ADJ:0 "東トルキスタン"
  
+ EVN:0 "エヴェンキ"
+ EVN_DEF:0 "エヴェンキ"
+ EVN_ADJ:0 "エヴェンキ"
+ 
  EZO:0 "蝦夷"
  EZO_DEF:0 "蝦夷"
  EZO_ADJ:0 "蝦夷"
@@ -1204,6 +1208,10 @@
  INO_DEF:0 "インド洋"
  INO_ADJ:0 "インド洋"
  
+ IRK:0 "イルクーツク"
+ IRK_DEF:0 "イルクーツク"
+ IRK_ADJ:0 "イルクーツク"
+ 
  JAD:0 "ジャバル・ドゥルーズ"
  JAD_DEF:0 "ジャバル・ドゥルーズ"
  JAD_ADJ:0 "ジャバル・ドゥルーズ"
@@ -1252,6 +1260,10 @@
  KHB_DEF:0 "ハバロフスク"
  KHB_ADJ:0 "ハバロフスク"
  
+ KMV:0 "ケメロヴォ"
+ KMV_DEF:0 "ケメロヴォ"
+ KMV_ADJ:0 "ケメロヴォ"
+ 
  KOK:0 "コーカン"
  KOK_DEF:0 "コーカン"
  KOK_ADJ:0 "コーカン"
@@ -1259,6 +1271,10 @@
  KRE:0 "カレン"
  KRE_DEF:0 "カレン"
  KRE_ADJ:0 "カレン"
+ 
+ KRS:0 "クラスノヤルスク"
+ KRS_DEF:0 "クラスノヤルスク"
+ KRS_ADJ:0 "クラスノヤルスク"
  
  KUM:0 "クムル"
  KUM_DEF:0 "クムル"
@@ -1295,6 +1311,14 @@
  NIG:0 "寧夏"
  NIG_DEF:0 "寧夏"
  NIG_ADJ:0 "寧夏"
+ 
+ NSB:0 "ノヴォシビルスク"
+ NSB_DEF:0 "ノヴォシビルスク"
+ NSB_ADJ:0 "ノヴォシビルスク"
+ 
+ OMS:0 "オムスク"
+ OMS_DEF:0 "オムスク"
+ OMS_ADJ:0 "オムスク"
  
  OTT:0 "オスマン"
  OTT_DEF:0 "オスマン"
@@ -1432,9 +1456,17 @@
  TRV_DEF:0 "トラヴァンコール"
  TRV_ADJ:0 "トラヴァンコール"
  
+ TSK:0 "トムスク"
+ TSK_DEF:0 "トムスク"
+ TSK_ADJ:0 "トムスク"
+ 
  TWN:0 "台湾"
  TWN_DEF:0 "台湾"
  TWN_ADJ:0 "台湾"
+ 
+ TYU:0 "チュメニ"
+ TYU_DEF:0 "チュメニ"
+ TYU_ADJ:0 "チュメニ"
  
  VAX:0 "ワ"
  VAX_DEF:0 "ワ"
@@ -1633,6 +1665,10 @@
  KRC_DEF:0 "カラチャイ"
  KRC_ADJ:0 "カラチャイ"
  
+ KRV:0 "キーロフ"
+ KRV_DEF:0 "キーロフ"
+ KRV_ADJ:0 "キーロフ"
+ 
  LAS:0 "ニーダーエスターライヒ"
  LAS_DEF:0 "ニーダーエスターライヒ"
  LAS_ADJ:0 "ニーダーエスターライヒ"
@@ -1713,6 +1749,10 @@
  NTL_DEF:0 "ネーデルラント"
  NTL_ADJ:0 "ネーデルラント"
  
+ ORB:0 "オレンブルグ"
+ ORB_DEF:0 "オレンブルグ"
+ ORB_ADJ:0 "オレンブルグ"
+ 
  PAD:0 "パダニア"
  PAD_DEF:0 "パダニア"
  PAD_ADJ:0 "パダニア"
@@ -1720,6 +1760,10 @@
  PIE:0 "ピエモンテ"
  PIE_DEF:0 "ピエモンテ"
  PIE_ADJ:0 "ピエモンテ"
+ 
+ PRM:0 "ペルミ"
+ PRM_DEF:0 "ペルミ"
+ PRM_ADJ:0 "ペルミ"
  
  RHI:0 "ライン"
  RHI_DEF:0 "ライン"
@@ -1769,6 +1813,10 @@
  SLZ_DEF:0 "ザルツブルク"
  SLZ_ADJ:0 "ザルツブルク"
  
+ SMA:0 "サマラ"
+ SMA_DEF:0 "サマラ"
+ SMA_ADJ:0 "サマラ"
+ 
  SME:0 "サーミランド"
  SME_DEF:0 "サーミランド"
  SME_ADJ:0 "サーミランド"
@@ -1792,6 +1840,10 @@
  UAS:0 "オーバーエスターライヒ"
  UAS_DEF:0 "オーバーエスターライヒ"
  UAS_ADJ:0 "オーバーエスターライヒ"
+ 
+ ULY:0 "ウリヤノフスク"
+ ULY_DEF:0 "ウリヤノフスク"
+ ULY_ADJ:0 "ウリヤノフスク"
  
  URA:0 "ウラル"
  URA_DEF:0 "ウラル"
@@ -1909,6 +1961,10 @@
  MYT:0 "マヨット"
  MYT_DEF:0 "マヨット"
  MYT_ADJ:0 "マヨット"
+ 
+ NAF:0 "北アフリカ"
+ NAF_DEF:0 "北アフリカ"
+ NAF_ADJ:0 "北アフリカ"
  
  R-U:0 "ルアンダ＝ウルンディ"
  R-U_DEF:0 "ルアンダ＝ウルンディ"
