--- a/localisation/japanese/map/geacps_countries_long_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_long_l_japanese.yml
@@ -1461,6 +1461,9 @@
  ETR_republic:0 "東トルキスタン共和国"
  ETR_republic_DEF:0 "東トルキスタン共和国"
  
+ EVN_republic:0 "エヴェンキ共和国"
+ EVN_republic_DEF:0 "エヴェンキ共和国"
+ 
  EZO_republic:0 "蝦夷共和国"
  EZO_republic_DEF:0 "蝦夷共和国"
  
@@ -1589,6 +1592,9 @@
  INO_federation:0 "インド洋連邦"
  INO_federation_DEF:0 "インド洋連邦"
  
+ IRK_republic:0 "イルクーツク共和国"
+ IRK_republic_DEF:0 "イルクーツク共和国"
+ 
  JAD_republic:0 "ジャバル・ドゥルーズ共和国"
  JAD_republic_DEF:0 "ジャバル・ドゥルーズ共和国"
  JAD_state:0 "ジャバル・ドゥルーズ国"
@@ -1647,11 +1653,17 @@
  KHB_republic:0 "ハバロフスク共和国"
  KHB_republic_DEF:0 "ハバロフスク共和国"
  
+ KMV_republic:0 "ケメロヴォ共和国"
+ KMV_republic_DEF:0 "ケメロヴォ共和国"
+ 
  KOK_republic:0 "コーカン共和国"
  KOK_republic_DEF:0 "コーカン共和国"
  
  KRE_republic:0 "カレン共和国"
  KRE_republic_DEF:0 "カレン共和国"
+ 
+ KRS_republic:0 "クラスノヤルスク共和国"
+ KRS_republic_DEF:0 "クラスノヤルスク共和国"
  
  KUM_khanate:0 "クムル・ハン国"
  KUM_khanate_DEF:0 "クムル・ハン国"
@@ -1697,6 +1709,12 @@
  NIG_republic_DEF:0 "寧夏共和国"
  NIG_soviet_government:0 "寧夏ソビエト政府"
  NIG_soviet_government_DEF:0 "寧夏ソビエト政府"
+ 
+ NSB_republic:0 "ノヴォシビルスク共和国"
+ NSB_republic_DEF:0 "ノヴォシビルスク共和国"
+ 
+ OMS_republic:0 "オムスク共和国"
+ OMS_republic_DEF:0 "オムスク共和国"
  
  OTT_sublime_state:0 "崇高なるオスマン国"
  OTT_sublime_state_DEF:0 "崇高なるオスマン国"
@@ -1866,6 +1884,9 @@
  TRV_kingdom:0 "トラヴァンコール王国"
  TRV_kingdom_DEF:0 "トラヴァンコール王国"
  
+ TSK_republic:0 "トムスク共和国"
+ TSK_republic_DEF:0 "トムスク共和国"
+ 
  TWN_military_clique:0 "台湾軍閥"
  TWN_military_clique_DEF:0 "台湾軍閥"
  TWN_minguo:0 "台湾民国"
@@ -1876,6 +1897,9 @@
  TWN_soviet_government_DEF:0 "台湾ソビエト政府"
  TWN_state:0 "台湾国"
  TWN_state_DEF:0 "台湾国"
+ 
+ TYU_republic:0 "チュメニ共和国"
+ TYU_republic_DEF:0 "チュメニ共和国"
  
  VAX_republic:0 "ワ共和国"
  VAX_republic_DEF:0 "ワ共和国"
@@ -2083,6 +2107,9 @@
  KRC_republic:0 "カラチャイ共和国"
  KRC_republic_DEF:0 "カラチャイ共和国"
  
+ KRV_republic:0 "キーロフ共和国"
+ KRV_republic_DEF:0 "キーロフ共和国"
+ 
  LAS_archduchy:0 "ニーダーエスターライヒ公国"
  LAS_archduchy_DEF:0 "ニーダーエスターライヒ公国"
  LAS_repbulic:0 "ニーダーエスターライヒ共和国"
@@ -2161,11 +2188,17 @@
  NTL_united_kingdom:0 "ネーデルラント連合王国"
  NTL_united_kingdom_DEF:0 "ネーデルラント連合王国"
  
+ ORB_republic:0 "オレンブルグ共和国"
+ ORB_republic_DEF:0 "オレンブルグ共和国"
+ 
  PAD_republic:0 "パダニア共和国"
  PAD_republic_DEF:0 "パダニア共和国"
  
  PIE_republic:0 "ピエモンテ共和国"
  PIE_republic_DEF:0 "ピエモンテ共和国"
+ 
+ PRM_republic:0 "ペルミ共和国"
+ PRM_republic_DEF:0 "ペルミ共和国"
  
  RHI_confederation:0 "ライン連邦"
  RHI_confederation_DEF:0 "ライン連邦"
@@ -2227,6 +2260,9 @@
  SLZ_republic:0 "ザルツブルク共和国"
  SLZ_republic_DEF:0 "ザルツブルク共和国"
  
+ SMA_republic:0 "サマラ共和国"
+ SMA_republic_DEF:0 "サマラ共和国"
+ 
  
  SMR_most_serene_republic:0 "晴朗極まる共和国サンマリノ"
  SMR_most_serene_republic_DEF:0 "晴朗極まる共和国サンマリノ"
@@ -2248,6 +2284,9 @@
  UAS_archduchy_DEF:0 "オーバーエスターライヒ公国"
  UAS_repbulic:0 "オーバーエスターライヒ共和国"
  UAS_repbulic_DEF:0 "オーバーエスターライヒ共和国"
+ 
+ ULY_republic:0 "ウリヤノフスク共和国"
+ ULY_republic_DEF:0 "ウリヤノフスク共和国"
  
  URA_republic:0 "ウラル共和国"
  URA_republic_DEF:0 "ウラル共和国"
@@ -2360,6 +2399,9 @@
  
  MYT_republic:0 "マヨット共和国"
  MYT_republic_DEF:0 "マヨット共和国"
+ 
+ NAF_republic:0 "北アフリカ共和国"
+ NAF_republic_DEF:0 "北アフリカ共和国"
  
  R-U_republic:0 "ルアンダ＝ウルンディ共和国"
  R-U_republic_DEF:0 "ルアンダ＝ウルンディ共和国"
