--- a/localisation/japanese/map/geacps_state_names_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_l_japanese.yml
@@ -249,7 +249,7 @@
  STATE_248:0 "ヤロスラヴリ"
  STATE_249:0 "カザン"
  STATE_250:0 "ウリヤノフスク"
- STATE_251:0 "クイブィシェフ"
+ STATE_251:0 "サマラ"
  STATE_252:0 "ゴーリキー"
  STATE_253:0 "イヴァノヴォ"
  STATE_254:0 "リャザン"
