--- a/localisation/japanese/map/geacps_state_names_native_l_japanese.yml
+++ b/localisation/japanese/map/geacps_state_names_native_l_japanese.yml
@@ -238,6 +238,7 @@
  STATE_247_de:0 "トヴェル"
  STATE_247_ru_bukharinism:0 "ルイコフグラード"
  STATE_248_de:0 "ヤロスラヴル"
+ STATE_251_ru_soviet:0 "クイブィシェフ"
  STATE_252_ru_soviet:0 "ゴーリキー"
  STATE_252_de:0 "ニーダーナウガルト"
  STATE_255_de:0 "ペンザ"
