特殊処理用国家タグATCの追加

--- a/localisation/japanese/generic/geacps_characters_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_characters_l_japanese.yml
@@ -690,3 +690,8 @@
 #VEN-ベネズエラ
  CHARACTER_romulo_ernesto_betancourt_bello:0 "ロムロ・エルネスト・ベタンクール・ベジョ"
  CHARACTER_romulo_ernesto_betancourt_bello_desc:0 "ベネズエラ大統領"
+ 
+##その他
+#ATC-南極
+ CHARACTER_mikado_penguin:0 "ミカドペンギン"
+ CHARACTER_mikado_penguin_desc:0 "桐谷神宮に祀られている偉大な神の1柱"
