--- a/localisation/japanese/map/geacps_countries_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_l_japanese.yml
@@ -2180,6 +2180,10 @@
  WIW_ADJ:0 "ウィンドワード"
  
 #大洋州
+ ATC:0 "南極"
+ ATC_DEF:0 "南極"
+ ATC_ADJ:0 "南極"
+ 
  CHR:0 "クリスマス"
  CHR_DEF:0 "クリスマス"
  CHR_ADJ:0 "クリスマス"
