ポートレートと政党名の設定

--- a/localisation/japanese/generic/geacps_characters_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_characters_l_japanese.yml
@@ -8,6 +8,11 @@
  CHARACTER_mohammed_zahir_shah:0 "ムハンマド・ザーヒル・シャー"
  CHARACTER_mohammed_zahir_shah_desc:0 "1933年11月に起きた父の暗殺により王位を継承した。1939年9月に開戦した第二次世界大戦では、1941年10月に英ソは独伊など枢軸国の外交官や民間人の国外追放を要求した。これに対しアフガニスタン政府は、枢軸国のみならず交戦中の全ての国の外交官以外の民間人に国外退去を命じた。\nこのように、ザーヒル・シャーの統治下で英ソ中に挟まれた中央アジアにおける緩衝国家として、日満などの大東亜共栄圏や独伊などからなる枢軸国、英米ソなどからなる連合国、中華民国からなる抗日民族統一戦線の、どちらにもつかない中立国として終戦まで機能していた。"
  
+#AZR-アゼルバイジャン
+ CHARACTER_jafar_pishevari:0 "ジャファル・ピーシェヴァリー"
+ CHARACTER_sayyed_jafar_pishevari:0 "セイエド・ジャファル・ピーシェヴァリー"
+ CHARACTER_sayyed_jafar_pishevari_desc:0 "アゼルバイジャン自治共和国大統領"
+ 
 #BHU-ブータン
  CHARACTER_jigme_wangchuck:0 "ジグミ・ワンチュク"
  CHARACTER_jigme_wangchuck_desc:0 "雷龍王"
@@ -230,6 +235,11 @@
  CHARACTER_iera_kinotita:0 "神聖なる共同体"
  CHARACTER_iera_kinotita_desc:0 "神聖な共同体は20の神聖な修道院の代表から構成されている。"
  
+#AUS-オーストリア
+ CHARACTER_theodor_korner:0 "テオドール・ケールナー"
+ CHARACTER_theodor_korner_edler_von_siegringen:0 "テオドール・ケールナー・エドラー・フォン・ジークリンゲン"
+ CHARACTER_theodor_korner_edler_von_siegringen_desc:0 "ウィーン市長"
+ 
 #BEL-ベルギー
  CHARACTER_leopold_iii:0 "レオポルド3世"
  CHARACTER_leopold_philippe_charles_albert_meinrad_hubert_marie_michel:0 "レオポルド・フィリップ・シャルル・アルベール・マンラド・ユベールテュス・マリー・ミゲル"
@@ -395,6 +405,9 @@
  CHARACTER_geoffrey_rhodes_bromet_desc:0 "マン島副総督"
  
 #GER-ドイツ
+ CHARACTER_arthur_werner:0 "アルトゥール・ヴェルナー"
+ CHARACTER_arthur_victor_hugo_werner:0 "アルトゥール・ヴィクトル・ユーゴー・ヴェルナー"
+ CHARACTER_arthur_victor_hugo_werner_desc:0 "ベルリン市長"
  CHARACTER_curt_ernst_carl_schumacher:0 "クルト・エルンスト・カール・シューマッハー"
  CHARACTER_curt_ernst_carl_schumacher_desc:0 "ドイツ連邦共和国大統領"
  CHARACTER_friedrich_wilhelm_reinhold_pieck:0 "フリードリヒ・ヴィルヘルム・ラインホルト・ピーク"
@@ -690,6 +703,12 @@
 #VEN-ベネズエラ
  CHARACTER_romulo_ernesto_betancourt_bello:0 "ロムロ・エルネスト・ベタンクール・ベジョ"
  CHARACTER_romulo_ernesto_betancourt_bello_desc:0 "ベネズエラ大統領"
+ 
+##大洋州
+#HAW
+ CHARACTER_kaiulani:0 "カイウラニ"
+ CHARACTER_victoria_kawekiu_kaiulani_lunalilo_kalaninuiahilapalapa_cleghorn:0 "ヴィクトリア・カウェキウ・カイウラニ・ルナリオ・カラニヌィアヒラパラパ・クレゴーン"
+ CHARACTER_victoria_kawekiu_kaiulani_lunalilo_kalaninuiahilapalapa_cleghorn_desc:0 "布哇女王"
  
 ##その他
 #ATC-南極
