--- a/localisation/japanese/generic/geacps_release_country_gui_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_release_country_gui_l_japanese.yml
@@ -1,6 +1,6 @@
 ﻿l_japanese:
 pfk_set_btn:0 "次の項目へ"
-
+pfk_setting_progress_level:0 "現在選択進度:[?ROOT.pfk_setting_progress]\n下のリスト:決定したことリスト"
 
 pfk_method_puppet:0 "$puppet$"
 pfk_method_protected_state:0 "保護国"
